[project]
name = "ComfyUI-Simple-File-Batcher"
description = "A lightweight custom node for **ComfyUI** that lists and batches files from a folder with filtering and sorting options."
version = "1.0.0"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/ai-joe-git/ComfyUI-Simple-File-Batcher"

[tool.comfy]
PublisherId = "ai-joe-git"
DisplayName = "Simple File Batcher"
Icon = ""
